fixing some header alignment.

--- a/_sass/modules/_navs.scss
+++ b/_sass/modules/_navs.scss
@@ -56,7 +56,7 @@
         &:before {
           width: 168px;
           height: 38px;
-          margin: -4px 0 0 !important;
+          margin: -4px 1.5rem 0;
         }
       }
       .is-scrolled &,
@@ -73,7 +73,7 @@
         &:before {
           width: 168px;
           height: 38px;
-          margin-top: 4px;
+          margin-top: 4px !important;
         }
       }
       @media (max-width: 800px) {
